--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>شركة التسويق الإلكتروني</title>
+    <title>شركة HM للتسويق الإلكتروني</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -32,13 +32,13 @@
 </head>
 <body>
     <header>
-        <h1>مرحبا بكم في شركة التسويق الإلكتروني</h1>
+        <h1>مرحبا بكم في شركة HM للتسويق الإلكتروني</h1>
     </header>
     <main>
         <p>نحن نقدم أفضل خدمات التسويق الإلكتروني لمساعدتك في تنمية عملك.</p>
     </main>
     <footer>
-        <p>&copy; 2024 شركة التسويق الإلكتروني</p>
+        <p>&copy; 2024 شركة HM للتسويق الإلكتروني</p>
     </footer>
 </body>
 </html>
