--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
             width: 100%;
             bottom: 0;
         }
+        .content {
+            text-align: left;
+            max-width: 800px;
+            margin: auto;
+        }
     </style>
 </head>
 <body>
@@ -35,7 +40,18 @@
         <h1>مرحبا بكم في شركة HM للتسويق الإلكتروني</h1>
     </header>
     <main>
-        <p>نحن نقدم أفضل خدمات التسويق الإلكتروني لمساعدتك في تنمية عملك.</p>
+        <div class="content">
+            <p>نحن نقدم أفضل خدمات التسويق الإلكتروني لمساعدتك في تنمية عملك.</p>
+            <h2>خدماتنا</h2>
+            <ul>
+                <li>إدارة حملات إعلانية على وسائل التواصل الاجتماعي</li>
+                <li>تحسين محركات البحث (SEO)</li>
+                <li>تحليل البيانات وتقديم تقارير مفصلة</li>
+                <li>إنشاء محتوى إبداعي</li>
+            </ul>
+            <h2>تواصل معنا</h2>
+            <p>للمزيد من المعلومات، يمكنك التواصل معنا عبر البريد الإلكتروني: info@hm-marketing.com</p>
+        </div>
     </main>
     <footer>
         <p>&copy; 2024 شركة HM للتسويق الإلكتروني</p>
