--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             padding: 10px;
             border-radius: 5px;
         }
-        .team, .testimonials, .blog {
+        .team, .testimonials, .blog, .contact {
             margin-top: 4em;
         }
         footer {
@@ -132,8 +132,8 @@
 
             <section id="contact" class="contact">
                 <h2>اتصل بنا</h2>
-                <p>للمزيد من المعلومات، يمكنك التواصل معنا عبر البريد الإلكتروني: info@hm-marketing.com</p>
-                <a href="mailto:info@hm-marketing.com" class="contact-btn">اتصل بنا</a>
+                <p>للمزيد من المعلومات، يمكنك التواصل معنا عبر البريد الإلكتروني: <a href="mailto:hamdaouimokrane@gmail.com">hamdaouimokrane@gmail.com</a></p>
+                <a href="mailto:hamdaouimokrane@gmail.com" class="contact-btn">اتصل بنا</a>
             </section>
         </div>
     </main>
@@ -142,28 +142,3 @@
     </footer>
 </body>
 </html>
-<style>
-    .service-list {
-        text-align: left;
-        max-width: 600px;
-        margin: auto;
-    }
-    .service-list ul {
-        list-style-type: none;
-        padding: 0;
-    }
-    .service-list li {
-        background-color: #e0e0e0;
-        margin: 5px 0;
-        padding: 10px;
-        border-radius: 5px;
-    }
-</style>
-<main>
-    <div class="content">
-        <p>نحن نقدم أفضل خدمات التسويق الإلكتروني لمساعدتك في تنمية عملك.</p>
-        <img src="https://example.com/your-image.jpg" alt="خدمات التسويق الإلكتروني">
-        <h2>خدماتنا</h2>
-        <!-- بقية المحتوى -->
-    </div>
-</main>
