--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
             transform: translateY(-10px);
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
         }
-        .team, .testimonials, .blog, .contact {
+        .blog {
             margin-top: 4em;
         }
-        .team ul, .testimonials ul, .blog ul {
+        .blog ul {
             list-style-type: none;
             padding: 0;
         }
-        .team li, .testimonials li, .blog li {
+        .blog li {
             margin: 10px 0;
             padding: 10px;
             background-color: #e0e0e0;
@@ -96,7 +96,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease-in-out;
         }
-        .team li:hover, .testimonials li:hover, .blog li:hover {
+        .blog li:hover {
             transform: translateY(-10px);
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
         }
@@ -150,8 +150,6 @@
     </header>
     <nav>
         <a href="#services">خدماتنا</a>
-        <a href="#team">فريق العمل</a>
-        <a href="#testimonials">شهادات العملاء</a>
         <a href="#blog">المدونة</a>
         <a href="#contact">اتصل بنا</a>
     </nav>
@@ -164,26 +162,6 @@
                     <li><i class="fas fa-search"></i> تحسين محركات البحث (SEO)</li>
                     <li><i class="fas fa-analytics"></i> تحليل البيانات وتقديم تقارير مفصلة</li>
                     <li><i class="fas fa-pencil-alt"></i> إنشاء محتوى إبداعي</li>
-                </ul>
-            </section>
-
-            <section id="team" class="team zoom-in">
-                <h2>فريق العمل</h2>
-                <p>لدينا فريق من المحترفين ذوي الخبرة في مجال التسويق الإلكتروني.</p>
-                <ul>
-                    <li>أحمد - مدير التسويق</li>
-                    <li>مريم - خبيرة SEO</li>
-                    <li>يوسف - محلل بيانات</li>
-                    <li>سارة - كاتبة محتوى</li>
-                </ul>
-            </section>
-
-            <section id="testimonials" class="testimonials fade-in">
-                <h2>شهادات العملاء</h2>
-                <p>ما يقوله عملاؤنا عنا:</p>
-                <ul>
-                    <li>"شركة HM ساعدتنا على زيادة مبيعاتنا بشكل كبير!" - شركة XYZ</li>
-                    <li>"خدمة رائعة ونتائج مذهلة." - شركة ABC</li>
                 </ul>
             </section>
 
