--- a/index.html
+++ b/index.html
@@ -12,54 +12,57 @@
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #f9f9f9;
             color: #333;
             line-height: 1.6;
+            scroll-behavior: smooth;
         }
         header {
             background-image: url('https://example.com/header-bg.jpg');
             background-size: cover;
             color: white;
-            padding: 4em 0;
+            padding: 5em 0;
             text-align: center;
             position: relative;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
         }
         header h1 {
-            font-size: 3em;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+            font-size: 3.5em;
+            text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.7);
         }
         nav {
             text-align: center;
             background-color: #333;
-            padding: 1em 0;
+            padding: 1.5em 0;
             position: sticky;
             top: 0;
             z-index: 1000;
         }
         nav a {
             color: white;
-            margin: 0 15px;
+            margin: 0 20px;
             text-decoration: none;
-            padding: 10px 20px;
-            transition: background-color 0.3s;
+            padding: 12px 25px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
         }
         nav a:hover {
             background-color: #4CAF50;
-            border-radius: 5px;
         }
         main {
-            padding: 2em;
+            padding: 3em 1em;
             text-align: center;
         }
         .content {
-            max-width: 1000px;
+            max-width: 1100px;
             margin: auto;
             text-align: left;
         }
         .content h2 {
             color: #4CAF50;
-            margin-bottom: 1em;
-            font-size: 2.5em;
+            margin-bottom: 1.5em;
+            font-size: 2.8em;
+            text-align: center;
         }
         .service-list ul {
             list-style-type: none;
@@ -70,16 +73,25 @@
         }
         .service-list li {
             background-color: #e0e0e0;
-            margin: 10px;
-            padding: 20px;
+            margin: 15px;
+            padding: 25px;
             border-radius: 10px;
             flex: 1 1 30%;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease-in-out;
+            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
         }
         .service-list li:hover {
             transform: translateY(-10px);
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+        }
+        .service-list li i {
+            font-size: 2.5em;
+            color: #4CAF50;
+            margin-bottom: 10px;
+        }
+        .service-list li p {
+            font-size: 1.2em;
+            color: #555;
         }
         .blog {
             margin-top: 4em;
@@ -87,23 +99,26 @@
         .blog ul {
             list-style-type: none;
             padding: 0;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
         }
         .blog li {
             margin: 10px 0;
-            padding: 10px;
+            padding: 15px;
             background-color: #e0e0e0;
             border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease-in-out;
         }
         .blog li:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+            transform: translateY(-5px);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
         }
         footer {
             background-color: #4CAF50;
             color: white;
-            padding: 1em 0;
+            padding: 1.5em 0;
             text-align: center;
             position: relative;
             bottom: 0;
@@ -112,7 +127,7 @@
         .contact-btn {
             background-color: #4CAF50;
             color: white;
-            padding: 10px 20px;
+            padding: 12px 30px;
             text-decoration: none;
             border-radius: 5px;
             margin-top: 2em;
@@ -134,7 +149,7 @@
             }
         }
         .zoom-in {
-            transform: scale(0.5);
+            transform: scale(0.8);
             animation: zoomIn 1s forwards;
         }
         @keyframes zoomIn {
