--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f9f9f9;
+            background-color: #f4f7fa; /* لون خلفية محايد فاتح */
             color: #333;
             line-height: 1.6;
             scroll-behavior: smooth;
@@ -20,7 +20,7 @@
         
         /* شريط العنوان العلوي */
         .top-bar {
-            background-color: #4CAF50;
+            background-color: #007BFF; /* الأزرق الزاهي */
             color: white;
             padding: 10px 0;
             text-align: center;
@@ -58,7 +58,7 @@
             transition: background-color 0.3s ease, transform 0.3s ease;
         }
         nav a:hover {
-            background-color: #4CAF50;
+            background-color: #0056b3; /* اللون الأزرق الداكن */
             transform: scale(1.1);
         }
 
@@ -72,7 +72,7 @@
             text-align: left;
         }
         .content h2 {
-            color: #4CAF50;
+            color: #007BFF; /* اللون الأزرق الزاهي */
             margin-bottom: 1.5em;
             font-size: 2.8em;
             text-align: center;
@@ -100,7 +100,7 @@
         }
         .service-list li i {
             font-size: 2.5em;
-            color: #4CAF50;
+            color: #007BFF; /* الأزرق الزاهي */
             margin-bottom: 10px;
         }
         .service-list li p {
@@ -113,7 +113,7 @@
             position: fixed;
             bottom: 20px;
             right: 20px;
-            background-color: #4CAF50;
+            background-color: #007BFF;
             color: white;
             padding: 15px;
             border-radius: 50%;
@@ -123,9 +123,9 @@
             transition: background-color 0.3s ease;
         }
         .back-to-top:hover {
-            background-color: #45a049;
+            background-color: #0056b3; /* الأزرق الداكن */
         }
-        
+
         .blog {
             margin-top: 4em;
         }
@@ -150,7 +150,7 @@
         }
 
         footer {
-            background-color: #4CAF50;
+            background-color: #007BFF;
             color: white;
             padding: 1.5em 0;
             text-align: center;
@@ -160,7 +160,7 @@
         }
 
         .contact-btn {
-            background-color: #4CAF50;
+            background-color: #007BFF;
             color: white;
             padding: 12px 30px;
             text-decoration: none;
@@ -170,7 +170,7 @@
             transition: background-color 0.3s ease-in-out;
         }
         .contact-btn:hover {
-            background-color: #45a049;
+            background-color: #0056b3; /* الأزرق الداكن */
         }
 
         /* تأثيرات التمرير */
@@ -211,7 +211,7 @@
             transition: color 0.3s ease;
         }
         .social-links a:hover {
-            color: #4CAF50;
+            color: #007BFF; /* الأزرق الزاهي */
         }
     </style>
 </head>
