--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f7fa; /* لون خلفية محايد فاتح */
+            background: linear-gradient(45deg, #f4f7fa, #e1e6f0); /* خلفية متدرجة */
             color: #333;
             line-height: 1.6;
             scroll-behavior: smooth;
@@ -20,7 +20,7 @@
         
         /* شريط العنوان العلوي */
         .top-bar {
-            background-color: #007BFF; /* الأزرق الزاهي */
+            background-color: #007BFF;
             color: white;
             padding: 10px 0;
             text-align: center;
@@ -28,7 +28,7 @@
         }
 
         header {
-            background-image: url('https://example.com/header-bg.jpg');
+            background-image: url('https://example.com/header-bg.jpg'); /* ضع رابط الصورة الخلفية هنا */
             background-size: cover;
             color: white;
             padding: 6em 0;
@@ -68,7 +68,7 @@
             transition: background-color 0.3s ease, transform 0.3s ease;
         }
         nav a:hover {
-            background-color: #0056b3; /* الأزرق الداكن */
+            background-color: #0056b3;
             transform: scale(1.1);
         }
 
@@ -145,7 +145,7 @@
             transition: background-color 0.3s ease;
         }
         .back-to-top:hover {
-            background-color: #0056b3; /* الأزرق الداكن */
+            background-color: #0056b3;
         }
 
         .blog {
@@ -192,7 +192,7 @@
             transition: background-color 0.3s ease-in-out;
         }
         .contact-btn:hover {
-            background-color: #0056b3; /* الأزرق الداكن */
+            background-color: #0056b3;
         }
 
         /* تأثيرات التمرير */
