--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <a href="#contact">اتصل بنا</a>
     </nav>
 
-    <!-- نموذج حجز استشارة -->
+    <!-- قسم الاستشارة -->
     <section id="consultation" class="section">
         <h2>احجز استشارتك المجانية</h2>
         <form action="submit_form.php" method="POST">
