--- a/index.html
+++ b/index.html
@@ -32,14 +32,16 @@ nav ul li a {
     color: #fff;
     text-decoration: none;
 }
-.main {
+main {
     padding: 2rem;
 }
 .hero {
-    background: url('https://example.com/hero-image.jpg') no-repeat center center/cover;
-    color: #fff;
+    background-color: #f8f8f8;
     padding: 2rem;
     text-align: center;
+}
+.hero h2 {
+    margin-top: 0;
 }
 footer {
     background-color: #333;
