--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+pip install flask
 from flask import Flask, render_template_string
 
 app = Flask(__name__)
@@ -151,3 +152,4 @@ def contact():
 
 if __name__ == '__main__':
     app.run(debug=True)
+python app.py
