--- a/index.html
+++ b/index.html
@@ -1,29 +1,40 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>موقع كرة القدم</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Shop</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+    }
+    .product-card {
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      border-radius: 8px;
+      margin-bottom: 20px;
+    }
+  </style>
 </head>
 <body>
-    <header class="bg-dark text-white text-center py-5">
-        <h1>موقع كرة القدم</h1>
-    </header>
+  <header class="bg-dark text-white p-3">
+    <div class="container d-flex justify-content-between">
+      <h1>My Shop</h1>
+      <nav>
+        <a href="#" class="text-white">Cart</a>
+      </nav>
+    </div>
+  </header>
 
-    <main class="container mt-5">
-        <div class="text-center">
-            <h2>مرحبا بكم في موقع كرة القدم</h2>
-            <p>للاطلاع على الفرق، اضغط على الرابط التالي:</p>
-            <a href="teams.html" class="btn btn-primary">عرض الفرق</a>
-        </div>
-    </main>
+  <main class="container my-5">
+    <h2 class="mb-4">Products</h2>
+    <div id="product-list" class="row"></div>
+  </main>
 
-    <footer class="bg-dark text-white text-center py-4">
-        <p>&copy; 2024 موقع كرة القدم. جميع الحقوق محفوظة.</p>
-    </footer>
+  <footer class="bg-dark text-white text-center py-3">
+    <p>&copy; 2025 My Shop. All Rights Reserved.</p>
+  </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+  <script src="shop.js"></script>
 </body>
 </html>
