--- a/index.html
+++ b/index.html
@@ -36,5 +36,8 @@
     </section>
 
     <script src="scripts.js"></script>
-</body>
+<a href="pages/user-register.html">تسجيل كمستخدم</a>
+<a href="pages/merchant-register.html">تسجيل كتاجر</a>
+
+    </body>
 </html>
