--- a/index.html
+++ b/index.html
@@ -27,5 +27,8 @@
 <div class="search-bar">
     <input type="text" id="searchInput" placeholder="ابحث عن فريق أو مباراة...">
 </div>
+    <div id="results"></div>
+<link rel="stylesheet" href="styles.css">
+<script src="script.js"></script>
 </body>
 </html>
